--- a/StudentManagementWebApp/Views/Student/Index.cshtml
+++ b/StudentManagementWebApp/Views/Student/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{ 
-    ViewBag.Title = "Home Page of Student";
+    ViewBag.Title = "Dashboard for Student";
 }
 
 <div class="text-capitalize text-center text-success">
