--- a/StudentManagementWebApp/Content/bootstrap-theme.css
+++ b/StudentManagementWebApp/Content/bootstrap-theme.css
@@ -361,7 +361,7 @@ fieldset[disabled] .btn-danger.active {
 .navbar-brand,
 .navbar-nav > li > a {
   text-shadow: 0 1px 0 rgba(255, 255, 255, 0.25);
-}
+}navbar-nav
 .navbar-inverse {
   background-image: -webkit-linear-gradient(top, #3c3c3c 0%, #222 100%);
   background-image: -o-linear-gradient(top, #3c3c3c 0%, #222 100%);
