--- a/StudentManagementWebApp/Content/bootstrap-theme.css
+++ b/StudentManagementWebApp/Content/bootstrap-theme.css
@@ -410,7 +410,9 @@ fieldset[disabled] .btn-danger.active {
   -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.25), 0 1px 2px rgba(0, 0, 0, 0.05);
   box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.25), 0 1px 2px rgba(0, 0, 0, 0.05);
 }
-.alert-success {
+.alert-
+
+{
   background-image: -webkit-linear-gradient(top, #dff0d8 0%, #c8e5bc 100%);
   background-image: -o-linear-gradient(top, #dff0d8 0%, #c8e5bc 100%);
   background-image: -webkit-gradient(linear, left top, left bottom, from(#dff0d8), to(#c8e5bc));
