--- a/StudentManagementWebApp/Views/Student/Index.cshtml
+++ b/StudentManagementWebApp/Views/Student/Index.cshtml
@@ -20,6 +20,10 @@
     )
 
     </div>
+    <div style="padding: 5px; background: black; margin: 20px 0 5px 0; margin: 0 auto; margin-bottom: 20px; color: white; width: 200px; border-radius: 5px; font-weight: bold; ">
+        Tổng số sinh viên: 
+        <span style="color: lawngreen;">@ViewBag.TotalStudents</span>
+    </div>
     <table class="table">
         <tr>
             <th class="text-center">
@@ -81,5 +85,5 @@
             </tr>
         }
 
-    </table>
+    </table>   
 </div>
