--- a/StudentManagementWebApp/Views/Student/Edit.cshtml
+++ b/StudentManagementWebApp/Views/Student/Edit.cshtml
@@ -36,11 +36,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.DayOfBirth, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.DayOfBirth, new { htmlAttributes = new { @type = "date", @class = "form-control" } })
-
-                @*@Html.EditorFor(model => model.DayOfBirth, new { htmlAttributes = new { @class = "form-control" } })*@
-                @*@Html.LabelFor(model => model.DayOfBirth, new { htmlAttributes = new { @class = "input-group-btn"} })*@
-
+                @Html.EditorFor(model => model.DayOfBirth, "{0:yyyy-MM-dd}", new { htmlAttributes = new { @type = "date", @class = "form-control theDate" } })
                 @Html.ValidationMessageFor(model => model.DayOfBirth, "", new { @class = "text-danger" })
             </div>
         </div>
