--- a/StudentManagementWebApp/Views/Error/ItemNotFound.cshtml
+++ b/StudentManagementWebApp/Views/Error/ItemNotFound.cshtml
@@ -1,4 +1,7 @@
-﻿<!DOCTYPE html>
+﻿@{
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+<!DOCTYPE html>
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
