--- a/StudentManagementWebApp/Views/Shared/_Layout.cshtml
+++ b/StudentManagementWebApp/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewBag.Title - Trường ĐH Lùa Gà</title>
     @Styles.Render("~/Content/css")
     @Styles.Render("~/Content/Customs/CustomTable_1.css")
+    @Styles.Render("~/Content/Customs/Custom_1.css")
     @Styles.Render("https://unicons.iconscout.com/release/v4.0.0/css/line.css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
