--- a/StudentManagementWebApp/Views/Student/Create.cshtml
+++ b/StudentManagementWebApp/Views/Student/Create.cshtml
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Student</h4>
+        <h4>Sinh Viên</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
