--- a/StudentManagementWebApp/Views/Student/Details.cshtml
+++ b/StudentManagementWebApp/Views/Student/Details.cshtml
@@ -4,10 +4,10 @@
     ViewBag.Title = "Details";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<h2>View</h2>
+<h2>Thông tin sinh viên</h2>
 
 <div class="container center-block">
-    <h4>Student</h4>
+    <h4>Sinh Viên</h4>
     <hr />
     <div class="col-md-6">
         <dl class="dl-horizontal">
