update table styles

--- a/StudentManagementWebApp/Content/Customs/CustomTable_1.css
+++ b/StudentManagementWebApp/Content/Customs/CustomTable_1.css
@@ -2,6 +2,12 @@
     /*background-color: #e7ecf0;*/
 }
 
+.pagination li:hover {
+    cursor: pointer;
+}
+table.th, table.td {
+    text-align: center;
+}
 /*PaleBlueRows*/
 table.paleBlueRows {
     font-family: Tahoma, Geneva, sans-serif;
