--- a/StudentManagementWebApp/Views/Shared/_Layout.cshtml
+++ b/StudentManagementWebApp/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     @Styles.Render("~/Content/css")
     @Styles.Render("~/Content/Customs/CustomTable_1.css")
     @Styles.Render("~/Content/Customs/Custom_1.css")
+    @Styles.Render("//cdn.datatables.net/1.12.0/css/jquery.dataTables.min.css");
     @Styles.Render("https://unicons.iconscout.com/release/v4.0.0/css/line.css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
@@ -46,6 +47,9 @@
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/Scripts/jquery.validate.min.js")
     @Scripts.Render("~/Scripts/jquery.validate.unobtrusive.min.js")
+    @Scripts.Render("~/Scripts/Index.js")
+    @Scripts.Render("//cdn.datatables.net/1.12.0/js/jquery.dataTables.min.js");
     @RenderSection("scripts", required: false)
 </body>
+
 </html>
