--- a/StudentManagementWebApp/Views/Student/Index.cshtml
+++ b/StudentManagementWebApp/Views/Student/Index.cshtml
@@ -7,72 +7,107 @@
     <h1 class="text-capitalize text-info">Trang thông tin sinh viên</h1>
 
     <div style="padding: 0 0 20px 0">
-    @Html.ActionLink("Create New", "Create", "Student", null,
-    new { @class = "btn btn-default btn-primary" }
-    )
-    @Html.ActionLink("Load Data Base", "LoadDB", "Student", null,
-    new { @class = "btn btn-default btn-primary" }
-    )
+        @Html.ActionLink("Create New", "Create", "Student", null,
+        new { @class = "btn btn-default btn-primary" }
+        )
+        @Html.ActionLink("Load Data Base", "LoadDB", "Student", null,
+        new { @class = "btn btn-default btn-primary" }
+        )
 
     </div>
     <div style="padding: 5px; background: black; margin: 20px 0 5px 0; margin: 0 auto; margin-bottom: 20px; color: white; width: 200px; border-radius: 5px; font-weight: bold; ">
-        Tổng số sinh viên: 
+        Tổng số sinh viên:
         <span style="color: lawngreen;">@ViewBag.TotalStudents</span>
     </div>
-    <table class="table">
-        <tr>
-            <th class="text-center">
-                @Html.DisplayNameFor(model => model.Id)
-            </th>
-            <th class="text-center">
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th class="text-center">
-                @Html.DisplayNameFor(model => model.Gender)
-            </th>
-            <th class="text-center">
-                @Html.DisplayNameFor(model => model.DayOfBirth)
-            </th>
-            <th class="text-center">
-                @Html.DisplayNameFor(model => model.ClassId)
-            </th>
-            <th class="text-center">
-                @Html.DisplayNameFor(model => model.CourseId)
-            </th>
-            <th></th>
-        </tr>
 
-        @foreach (var item in Model)
-        {
+    <div class="container">
+        <h4 style="text-align: left;">Chọn số lượng dòng</h4>
+        <div class="form-group">
+            <!--		Show Numbers Of Rows 		-->
+            <select class="form-control" name="state" id="maxRows">
+                <option value="5000">Show ALL Rows</option>
+                <option value="5">5</option>
+                <option value="10">10</option>
+                <option value="15">15</option>
+                <option value="20">20</option>
+                <option value="50">50</option>
+                <option value="70">70</option>
+                <option value="100">100</option>
+            </select>
+
+        </div>
+
+        <table id="table-id" class="table">
             <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Id)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Gender)
-                </td>
-                <td>
-                    @{
-                    var date = item.DayOfBirth.ToString("dd/MM/yyyy");
-                    @Html.DisplayName(date)
-                    }
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.ClassId)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.CourseId)
-                </td>
-                <td>
-                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                    @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                    @Html.ActionLink("Delete", "Delete", new { id = item.Id })
-                </td>
+                <th class="text-center">
+                    @Html.DisplayNameFor(model => model.Id)
+                </th>
+                <th class="text-center">
+                    @Html.DisplayNameFor(model => model.Name)
+                </th>
+                <th class="text-center">
+                    @Html.DisplayNameFor(model => model.Gender)
+                </th>
+                <th class="text-center">
+                    @Html.DisplayNameFor(model => model.DayOfBirth)
+                </th>
+                <th class="text-center">
+                    @Html.DisplayNameFor(model => model.ClassId)
+                </th>
+                <th class="text-center">
+                    @Html.DisplayNameFor(model => model.CourseId)
+                </th>
+                <th></th>
             </tr>
-        }
 
-    </table>   
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Id)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Name)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Gender)
+                    </td>
+                    <td>
+                        @{
+                            var date = item.DayOfBirth.ToString("dd/MM/yyyy");
+                            @Html.DisplayName(date)
+                        }
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.ClassId)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.CourseId)
+                    </td>
+                    <td>
+                        @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                        @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                        @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                    </td>
+                </tr>
+            }
+
+        </table>
+        <!--		Start Pagination -->
+        <div class='pagination-container'>
+            <nav>
+                <ul class="pagination">
+
+                    <li data-page="prev">
+                        <span> < <span class="sr-only">(current)</span></span>
+                    </li>
+                    <!--	Here the JS Function Will Add the Rows -->
+                    <li data-page="next" id="prev">
+                        <span> > <span class="sr-only">(current)</span></span>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+
+    </div><!-- 		End of Container -->
 </div>
