--- a/StudentManagementWebApp/Views/Student/ResultDetails.cshtml
+++ b/StudentManagementWebApp/Views/Student/ResultDetails.cshtml
@@ -6,10 +6,40 @@
 }
 
 <h2 class="text-center" style="color: #384289;">Kết quả học tập</h2>
-<div class="container ">
-    <table class="blueTable">
+<div class="container">
+    <h4 style="text-align: left;">Chọn số lượng dòng</h4>
+    <div class="form-group">
+        <!--		Show Numbers Of Rows 		-->
+        <select class="form-control" name="state" id="maxRows">
+            <option value="5000">Show ALL Rows</option>
+            <option value="5">5</option>
+            <option value="10">10</option>
+            <option value="15">15</option>
+            <option value="20">20</option>
+            <option value="50">50</option>
+            <option value="70">70</option>
+            <option value="100">100</option>
+        </select>
+
+    </div>
+    <table id="table-id" class="blueTable">
         @Html.Raw(ViewBag.ResultList)
     </table>
+    <!--		Start Pagination -->
+    <div class='pagination-container'>
+        <nav>
+            <ul class="pagination">
+
+                <li data-page="prev">
+                    <span> < <span class="sr-only">(current)</span></span>
+                </li>
+                <!--	Here the JS Function Will Add the Rows -->
+                <li data-page="next" id="prev">
+                    <span> > <span class="sr-only">(current)</span></span>
+                </li>
+            </ul>
+        </nav>
+    </div>
 </div>
 <div class="container center-block margin-top-15">
     <p>
