--- a/StudentManagementWebApp/Views/Shared/_Layout.cshtml
+++ b/StudentManagementWebApp/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     @Styles.Render("~/Content/Customs/CustomTable_1.css")
     @Styles.Render("~/Content/Customs/Custom_1.css")
     @Styles.Render("//cdn.datatables.net/1.12.0/css/jquery.dataTables.min.css");
+
     @Styles.Render("https://unicons.iconscout.com/release/v4.0.0/css/line.css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
@@ -30,8 +31,32 @@
                     <li>@Html.ActionLink("Liên hệ", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Khác", "Intro", "Home")</li>
                 </ul>
+                <div class="navbar-collapse collapse" style="float: right">
+                    <ul class="nav navbar-nav">
+                        <li>
+                            @if (Request.IsAuthenticated)
+                            {
+
+                                @Html.ActionLink("Log Out", "Logout", "Account")
+                            }
+                            else
+                            {
+
+                                @Html.ActionLink("Login", "Index", "User/Login")
+                            }
+                        </li>
+                        <li>
+                            @if (!Request.IsAuthenticated)
+                            {
+                                @Html.ActionLink("Register", "Register", "Account")
+                            }
+
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
+            </div>
+            
     </div>
     <div class="container body-content">
         @RenderBody()
