--- a/StudentManagementWebApp/Views/Shared/_Layout.cshtml
+++ b/StudentManagementWebApp/Views/Shared/_Layout.cshtml
@@ -1,12 +1,12 @@
-﻿<!DOCTYPE html>
+﻿
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Trường ĐH Lùa Gà</title>
     @Styles.Render("~/Content/css")
-    @Styles.Render("~/Content/Customs/CustomTable_1.css")
-    @Styles.Render("~/Content/Customs/Custom_1.css")
+    @Styles.Render("~/Content/Customs/css")
     @Styles.Render("//cdn.datatables.net/1.12.0/css/jquery.dataTables.min.css");
 
     @Styles.Render("https://unicons.iconscout.com/release/v4.0.0/css/line.css")
@@ -31,30 +31,28 @@
                     <li>@Html.ActionLink("Liên hệ", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Khác", "Intro", "Home")</li>
                 </ul>
-                <div class="navbar-collapse collapse" style="float: right">
-                    <ul class="nav navbar-nav">
-                        <li>
-                            @if (Request.IsAuthenticated)
-                            {
+                <ul class="nav navbar-nav" style="float: right">
+                    <li>
+                        @if (Session["Username"] != null)
+                        {
+                            @Html.ActionLink("Log Out", "Logout", "Authentication", htmlAttributes: new { @class = "float-right" })
+                            <a style="float: right">@Session["Username"].ToString()</a>
+                        }
+                        else
+                        {
+                            @Html.ActionLink("Login", "Login", "Authentication")
+                        }
+                    </li>
+                    <li>
+                        @if (Session["Username"] == null)
+                        {
 
-                                @Html.ActionLink("Log Out", "Logout", "Account")
-                            }
-                            else
-                            {
+                            @Html.ActionLink("Register", "Register", "Authentication")
+                        }
 
-                                @Html.ActionLink("Login", "Index", "Account/Authentication")
+                    </li>
+                </ul>
 
-                            }
-                        </li>
-                        <li>
-                            @if (!Request.IsAuthenticated)
-                            {
-                                @Html.ActionLink("Register", "Register", "Account")
-                            }
-
-                        </li>
-                    </ul>
-                </div>
             </div>
             </div>
             
